[package]
name = "hyperion-tasmota-bridge"
version = "0.1.0"
authors = ["DerFetzer <kontakt@der-fetzer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
# config = { version = "0.11.0", features = ["yaml"] } # https://github.com/mehcode/config-rs/issues/278
config = { git = "https://github.com/mehcode/config-rs", features = ["yaml"] }
serde = "1.0.136"
serde_derive = "1.0.136"
either = "1.6.1"
log = "0.4.14"
env_logger = "0.9.0"