[package]
name = "hyperion-tasmota-bridge"
version = "0.1.0"
authors = ["DerFetzer <kontakt@der-fetzer.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
config = { version = "0.13.3", features = ["yaml"] }
serde = "1.0"
serde_derive = "1.0"
either = "1.8.1"
log = "0.4"
env_logger = "0.9.3"

[profile.release]
lto = "thin"
